1.推送sdk依赖版本更新。 2.gradle下载替换成阿里镜像路径。 3.添加android.enableJetifier=true解决第三方库或依赖系统库仍然使用旧的Android支持库，与新的AndroidX库兼容问题。

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ plugins {
 }
 
 gradle.ext {
-    pushVersion = '3.8.6'
-    thirdPushVersion = '3.8.6'
+    pushVersion = '3.8.8.1'
+    thirdPushVersion = '3.8.8'
 }
 
 android {
@@ -92,7 +92,7 @@ dependencies {
     api "com.aliyun.ams:alicloud-android-third-push-meizu:${gradle.thirdPushVersion}"
     api "com.aliyun.ams:alicloud-android-third-push-vivo:${gradle.thirdPushVersion}"
     api "com.aliyun.ams:alicloud-android-third-push-oppo:${gradle.thirdPushVersion}"
-    api "com.aliyun.ams:alicloud-android-third-push-xiaomi:3.8.6.1"
+    api "com.aliyun.ams:alicloud-android-third-push-xiaomi:${gradle.thirdPushVersion}"
     api "com.aliyun.ams:alicloud-android-third-push-huawei:${gradle.thirdPushVersion}"
     api "com.aliyun.ams:alicloud-android-third-push-honor:${gradle.thirdPushVersion}"
     api "com.aliyun.ams:alicloud-android-third-push-fcm:${gradle.thirdPushVersion}"
